--- a/2016-2017/labo-4/CMakeLists.txt
+++ b/2016-2017/labo-4/CMakeLists.txt
@@ -19,7 +19,7 @@ include_directories(${CMAKE_SOURCE_DIR})
 # Main
 
 set(OPTIONS "-g -std=gnu++11")
-set(WARNINGS "-Wall -Wextra -pedantic")
+set(WARNINGS "-Wall -Wpedantic -Wextra -Wconversion")
 set(FLAGS "${OPTIONS} ${WARNINGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS}")
 
@@ -43,13 +43,13 @@ include_directories(${GOOGLETEST_DIR}/include) # path for gtest header files
 link_directories(${GOOGLETEST_DIR}/build) # path for libgtest.a or libtest_main.a
 
 add_executable( # Add your source code files and headers for testing
-    ${BUILD_NAME}-test
+    test-${BUILD_NAME}
     bknoop.h
     schijf.h
     test/bknoop-unittest.cpp
 )
 
-target_link_libraries(${BUILD_NAME}-test ${CMAKE_THREAD_LIBS_INIT} gtest gtest_main)
+target_link_libraries(test-${BUILD_NAME} ${CMAKE_THREAD_LIBS_INIT} gtest gtest_main)
 
-add_test(${BUILD_NAME}-testrun ${BUILD_NAME}-test)
+add_test(${BUILD_NAME}-testrun test-${BUILD_NAME})
 
