Zoeken in Btree toegevoegd

--- a/2016-2017/labo-4/CMakeLists.txt
+++ b/2016-2017/labo-4/CMakeLists.txt
@@ -1,4 +1,5 @@
 
+################################################################################
 # running cmake
 #
 #   mkdir build
@@ -8,6 +9,7 @@
 # <your preferred development environment> can be found by
 #   cmake --help
 #
+################################################################################
 
 cmake_minimum_required(VERSION 3.6.2 FATAL_ERROR)
 
@@ -16,14 +18,14 @@ set(BUILD_NAME "btree")
 
 include_directories(${CMAKE_SOURCE_DIR})
 
-# Main
+# Main #########################################################################
 
 set(OPTIONS "-g -std=gnu++11")
 set(WARNINGS "-Wall -Wpedantic -Wextra -Wconversion")
 set(FLAGS "${OPTIONS} ${WARNINGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS}")
 
-add_executable( # Add your source code files and headers
+add_executable( # Your source code files and headers
     ${BUILD_NAME}
 
     bknoop.h
@@ -32,21 +34,22 @@ add_executable( # Add your source code files and headers
     schijf.h
 )
 
-# Testing
+# Testing ######################################################################
 
 enable_testing()
 
 find_package(Threads)
 
-set(GOOGLETEST_DIR /home/martijn/git/googletest/googletest)
-include_directories(${GOOGLETEST_DIR}/include) # path for gtest header files
-link_directories(${GOOGLETEST_DIR}/build) # path for libgtest.a or libtest_main.a
+set(GOOGLETEST_DIR /home/martijn/git/googletest/googletest) # Your path to googletest main directory
+include_directories(${GOOGLETEST_DIR}/include) # Your path for gtest header files
+link_directories(${GOOGLETEST_DIR}/build) # Your path for libgtest.a or libtest_main.a
 
-add_executable( # Add your source code files and headers for testing
+add_executable( # Your source code files and headers for testing
     test-${BUILD_NAME}
     bknoop.h
     schijf.h
     test/bknoop-unittest.cpp
+    test/btree-unittest.cpp
 )
 
 target_link_libraries(test-${BUILD_NAME} ${CMAKE_THREAD_LIBS_INIT} gtest gtest_main)
