--- a/2017-2018/labo-4/CMakeLists.txt
+++ b/2017-2018/labo-4/CMakeLists.txt
@@ -18,6 +18,8 @@ set(SOURCES
     main.cpp
     csv.h
     puntgenerator.h
+    zoekboom14.h
+    zoekknoop14.h
     )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
