Punt2D apart getrokken

--- a/2017-2018/labo-4/CMakeLists.txt
+++ b/2017-2018/labo-4/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SOURCES
     puntgenerator.h
     zoekboom14.h
     zoekknoop14.h
+    punt2d.h
     )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
