Travis CI debug

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ compiler:
 env:
   - TEST_DIR = libraries/graaf
   - TEST_DIR = libraries/woordstroom
-script: cd TEST_DIR && ./generate_makefile.sh && cd build && make
+script: cd $TEST_DIR && ./generate_makefile.sh && cd build && make
