csv toegevoegd aan Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ compiler:
 env:
     - TEST_DIR=libraries/graaf
     - TEST_DIR=libraries/woordstroom
+    - TEST_DIR=libraries/csv
 
 before_script:
     - cd $TEST_DIR
