--- a/2017-2018/labo-5-stroomnetwerken/CMakeLists.txt
+++ b/2017-2018/labo-5-stroomnetwerken/CMakeLists.txt
@@ -20,6 +20,8 @@ set(SOURCES
     graaf.h
     vergrotendpad.h
     langpadzoeker.h
+    kortstepadzoeker.h
+    volgendpadzoeker.h
     stroomnetwerk.h
     )
 
