graaf van library gebruikt

--- a/2017-2018/labo-5-stroomnetwerken/CMakeLists.txt
+++ b/2017-2018/labo-5-stroomnetwerken/CMakeLists.txt
@@ -17,7 +17,7 @@ endif()
 
 set(SOURCES
     main.cpp
-    graaf.h
+    ../../libraries/graaf/graaf.h
     vergrotendpad.h
     langpadzoeker.h
     kortstepadzoeker.h
