stroomnetwerkgenerator aangepast aan c++14

--- a/2017-2018/labo-5-stroomnetwerken/CMakeLists.txt
+++ b/2017-2018/labo-5-stroomnetwerken/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES
     kortstepadzoeker.h
     volgendpadzoeker.h
     stroomnetwerk.h
+    stroomnetwerkgenerator.h
     )
 
 set(TEST_SOURCES
