--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,14 @@ language: cpp
 
 compiler:
     - clang
-    - gcc
+    # - gcc
 
 env:
     - TEST_DIR=libraries/graaf
     - TEST_DIR=libraries/woordstroom
     - TEST_DIR=libraries/csv
+    - TEST_DIR=2017-2018/labo-5-stroomnetwerken
+    - TEST_DIR=2017-2018/labo-8-automaten
 
 before_script:
     - cd $TEST_DIR
