--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,17 @@ compiler:
     - clang
     # - gcc
 
+addons:
+    apt:
+        packages:
+            - clang-5.0
+    
 env:
     - TEST_DIR=libraries/graaf
     - TEST_DIR=libraries/woordstroom
     - TEST_DIR=libraries/csv
     - TEST_DIR=2017-2018/labo-5-stroomnetwerken
-    - TEST_DIR=2017-2018/labo-8-automaten
+    # - TEST_DIR=2017-2018/labo-8-automaten # travis kent nog geen c++14
 
 before_script:
     - cd $TEST_DIR
