unittests toegevoegd, na naar da succesvol ingevoerd, enkel nog bugs bij zoeken met DA

--- a/generic-project-files/CMakeLists.txt
+++ b/generic-project-files/CMakeLists.txt
@@ -20,7 +20,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE debug)
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -pg")
     set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-checks=*;-header-filter=.*")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
@@ -74,18 +74,27 @@ if (TEST_SOURCES)
         include_directories("${gtest_SOURCE_DIR}/include")
     endif()
 
-    foreach(file ${ADDITIONAL_TEST_FILES})
-        configure_file(${file} ${file} COPYONLY)
-    endforeach(file)
+    foreach(FILE ${ADDITIONAL_TEST_FILES})
+        configure_file(${FILE} ${FILE} COPYONLY)
+    endforeach(FILE)
 
     enable_testing()
-    add_executable(unittests ${TEST_SOURCES})
-    target_link_libraries(unittests gtest_main gmock)
-    add_test(unittests unittests)
 
-    add_custom_command(TARGET unittests
-        POST_BUILD
-        COMMAND $<TARGET_FILE:unittests>
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-        COMMENT "Running ${PROJECT_NAME} unittests" VERBATIM)
+    foreach(FILE ${TEST_SOURCES})
+        # TODO bekijken of we een executable kunnen maken met alle tests erin, 
+        # ipv een executable per test file
+
+        string(REGEX REPLACE "\\.[^.]*$" "" FILE_WITHOUT_EXT ${FILE})
+        set(EXECUTABLE_NAME "unittest_${FILE_WITHOUT_EXT}")
+
+        add_executable(${EXECUTABLE_NAME} ${FILE})
+        target_link_libraries(${EXECUTABLE_NAME} gtest_main gmock)
+        add_test("${EXECUTABLE_NAME}_ctest" ${EXECUTABLE_NAME})
+
+        add_custom_command(TARGET ${EXECUTABLE_NAME}
+            POST_BUILD
+            COMMAND $<TARGET_FILE:${EXECUTABLE_NAME}>
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+            COMMENT "Running ${PROJECT_NAME} ${EXECUTABLE_NAME}" VERBATIM)
+    endforeach(FILE)
 endif()
