--- a/generic-project-files/CMakeLists.txt
+++ b/generic-project-files/CMakeLists.txt
@@ -1,14 +1,22 @@
 
 set(SOURCES
+    main.cpp
+    regexp11.h
+    thompsonna.h
+    zoekna.h
+    zoekda.h
     )
 
 set(ADDITIONAL_INPUT_FILES
     )
 
 set(TEST_SOURCES
+    zoekna_test.cpp
+    zoekda_test.cpp
     )
 
 set(ADDITIONAL_TEST_FILES
+    test_input.txt
     )
 
 ### executable #################################################################
@@ -20,7 +28,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE debug)
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -pg")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
     set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-checks=*;-header-filter=.*")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
@@ -29,9 +37,10 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 endif()
 
 if (SOURCES)
-    foreach(file ${ADDITIONAL_INPUT_FILES})
-        configure_file(${file} ${file} COPYONLY)
-    endforeach(file)
+    foreach(FILE ${ADDITIONAL_INPUT_FILES})
+        message("Copying file ${FILE}")
+        configure_file(${FILE} ${FILE} COPYONLY)
+    endforeach(FILE)
 
     add_executable(${PROJECT_NAME} ${SOURCES})
 endif()
@@ -75,6 +84,7 @@ if (TEST_SOURCES)
     endif()
 
     foreach(FILE ${ADDITIONAL_TEST_FILES})
+        message("Copying file ${FILE}")
         configure_file(${FILE} ${FILE} COPYONLY)
     endforeach(FILE)
 
@@ -85,16 +95,16 @@ if (TEST_SOURCES)
         # ipv een executable per test file
 
         string(REGEX REPLACE "\\.[^.]*$" "" FILE_WITHOUT_EXT ${FILE})
-        set(EXECUTABLE_NAME "unittest_${FILE_WITHOUT_EXT}")
+        set(TEST_EXECUTABLE_NAME "unittest_${FILE_WITHOUT_EXT}")
 
-        add_executable(${EXECUTABLE_NAME} ${FILE})
-        target_link_libraries(${EXECUTABLE_NAME} gtest_main gmock)
-        add_test("${EXECUTABLE_NAME}_ctest" ${EXECUTABLE_NAME})
+        add_executable(${TEST_EXECUTABLE_NAME} ${FILE})
+        target_link_libraries(${TEST_EXECUTABLE_NAME} gtest_main gmock)
+        add_test("${TEST_EXECUTABLE_NAME}_ctest" ${TEST_EXECUTABLE_NAME})
 
-        add_custom_command(TARGET ${EXECUTABLE_NAME}
+        add_custom_command(TARGET ${TEST_EXECUTABLE_NAME}
             POST_BUILD
-            COMMAND $<TARGET_FILE:${EXECUTABLE_NAME}>
+            COMMAND $<TARGET_FILE:${TEST_EXECUTABLE_NAME}>
             WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-            COMMENT "Running ${PROJECT_NAME} ${EXECUTABLE_NAME}" VERBATIM)
+            COMMENT "Running ${PROJECT_NAME} ${TEST_EXECUTABLE_NAME}" VERBATIM)
     endforeach(FILE)
 endif()
