--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     - TEST_DIR=libraries/woordstroom
     - TEST_DIR=libraries/csv
     # - TEST_DIR=2017-2018/labo-5-stroomnetwerken # travis kent nog geen c++14
+    - TEST_DIR=2017-2018/labo-6-samenhangende-componenten
     - TEST_DIR=2017-2018/labo-8-automaten
 
 before_script:
