Fix for labo 3 in travis

--- a/2016-2017/labo-03-dynamisch-programmeren/CMakeLists.txt
+++ b/2016-2017/labo-03-dynamisch-programmeren/CMakeLists.txt
@@ -12,6 +12,9 @@ set(TEST_SOURCES
     )
 
 set(ADDITIONAL_TEST_FILES
+    try-out-2.dat
+    try-out.dat
+    versnick.dat
     )
 
 ### executable #################################################################
